--- a/css/style.css
+++ b/css/style.css
@@ -169,13 +169,13 @@ footer p{
 }
 .social i{
   padding: 10px 20px;
-  font-size: 50px;
+  font-size: 3vw;
 }
 .social i[class*="plane"]{
-  font-size: 40px;
+  font-size: 2.6vw;
 }
 .social i[class*="plane"]:hover{
-  font-size: 42px;
+  font-size: 2.7vw;
   color:  #cd1a2f;
 }
  a , a:visited{
@@ -185,7 +185,7 @@ footer p{
   color: #cd1a2f;
 }
 .social i:not([class*="plane"]):hover{
-  font-size: 52px;
+  font-size: 3.1vw;
   color: #cd1a2f;
 }
 @media (max-width: 992px){
@@ -228,7 +228,7 @@ footer p{
   nav ul li{
     display: block;
   }
-  a:hover, a:active{
+  nav ul li a:hover,nav ul li a:active{
     display: block;
     width: 100%;
     background-color: #cd1a2f;
